fix: whales address wrapping, no horizontal scroll#3

--- a/css/modules/portfolio.css
+++ b/css/modules/portfolio.css
@@ -219,7 +219,7 @@
     border-bottom: none;
 }
 
-,.whale-address {
+.whale-address {
     font-family: monospace;
     font-size: 12px;
     word-break: break-all;
